# rengine

./: CMakeLists.txt  README.md
examples/: benchmark_blend.cpp  benchmark_rectangles.cpp  blur.cpp  blur.h  button.cpp  button.h  example.h  examples.h  filters.cpp  imageutils.cpp  imageutils.h  layeredopacity.cpp  layeredopacity.h  main.cpp  membersignalhandler.h  rectangles.cpp  rectangles.h  rootwindow.cpp  rootwindow.h  shadow.cpp  shadow.h  text.cpp  touch.cpp
examples/hello/: CMakeLists.txt  main.cpp
ideas/: generated_sample.h  new_animations.h  rengine.json  repeater.json  replicator.h  sample.cpp  sample.json
include/: backend.h  rengine.h
include/animationsystem/: animation.h  animationappliers.h
include/backend/: backend.h  backend_decl.h
include/backend/qt/: qtbackend.h  qtpreinclude.h
include/backend/sdl/: sdlbackend.h
include/backend/sfhwc/: mttouchdevice.h  sfhwc.h  sfhwcbackend.h  sfhwcbuffer.h  sfhwcsurface.h  sfhwctouchdevice.h
include/common/: allocationpool.h  colormatrix.h  common.h  kalmanfilter.h  logging.h  mathtypes.h
include/json/: tokenizer.h
include/object/: property.h  replicator.h  signal.h
include/scenegraph/: layer.h  layoutnode.h  node.h  noderef.h  opengl.h  openglcontext.h  openglrenderer.h  openglrenderer_shaders.h  openglshaderprogram.h  opengltexture.h  opengltexturelayer.h  renderer.h  texture.h
include/util/: colormatrix.h  glyphs.h  maindefine.h  resourcehandler.h  resourcemanager.h  standardsurface.h  standardsurfaceinterface.h  surfaceinterfaceforgenerated.h  units.h  workqueue.h
include/windowsystem/: event.h  surface.h
src/: CMakeLists.txt  backend.h  rengine.h  system.h
src/animationsystem/: animation.h  animationsystem.h
src/common/: common.h  mathtypes.h
src/qt/: qtbackend.cpp  qtsystem.cpp
src/renginec/: codegenerator.h  main.cpp  objectmodel.h  objectmodelbuilder.h  parser.h  tokenizer.h  value.h
src/scenegraph/: layer.h  node.cpp  node.h  opengl.h  openglcontext.h  openglrenderer.cpp  openglrenderer.h  openglshaderprogram.h  openglsurface.h  opengltexturelayer.h  renderer.h  scenegraph.h  surface.h
src/sdl/: sdlbackend.cpp
src/windowsystem/: surface.h  window.h  windowsystem.h
tests/: CMakeLists.txt  test.h  tst_animationsystem.cpp  tst_keyframes.cpp  tst_layout.cpp  tst_mathtypes.cpp  tst_node.cpp  tst_property.cpp  tst_render.cpp  tst_signal.cpp  tst_units.cpp  tst_workqueue.cpp
